--- a/home/templates/condition/condition.html
+++ b/home/templates/condition/condition.html
@@ -175,7 +175,7 @@
                           <input type="submit" value="Delete">  
                         </form>
                         
-                        <a href=""><i class="material-icons" data-toggle="tooltip" title="Edit" style="color:#ffd600  ">&#xE254;</i></a>
+                        <a href="{% url 'view_update_rule' %}"><i class="material-icons" data-toggle="tooltip" title="Edit" style="color:#ffd600  ">&#xE254;</i></a>
                       </td>
                       <td class="col-lg-3"> <a href="{% url 'resultat' x.id %}" >  <i class="material-icons" data-toggle="tooltip" title="Add" style="color:#303f9f ">&#xe148;</i>ADD resultat</a></td>
 
